--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "function-helper",
+  "name": "@hieutran2902/function-helper",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
